2009-10-12  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Sam Weinig.

        Fix issue caretRangeFromPoint() returns wrong result for a zoomed and 
        scrolled page.
        https://bugs.webkit.org/show_bug.cgi?id=30034

        * dom/Document.cpp:
        (WebCore::Document::elementFromPoint): calculate the correct point 
        relative to document when the page is zoomed and scrolled.
        (WebCore::Document::caretRangeFromPoint): calculate the correct point 
        relative to document when the page is zoomed and scrolled.

2009-10-12  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Sam Weinig.

        JavaScript bindings of WebSocket addEventListener/removeEventListener
        https://bugs.webkit.org/show_bug.cgi?id=29841

        Test: fast/websockets/websocket-event-target.html

        * bindings/js/JSWebSocketCustom.cpp:
        (WebCore::JSWebSocket::addEventListener):
        (WebCore::JSWebSocket::removeEventListener):
        * bindings/v8/custom/V8CustomBinding.h:
        * bindings/v8/custom/V8WebSocketCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):
        * websockets/WebSocket.idl:

2009-10-12  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=29078
        <rdar://problem/7288221>

        Add a mechanism to blacklist certain codecs.  Initially, just blacklist UTF-7 as HTML5 encourages.

        * platform/text/TextEncodingRegistry.cpp:
        (WebCore::pruneBlacklistedCodecs):
        (WebCore::buildBaseTextCodecMaps):
        (WebCore::extendTextCodecMaps):

2009-10-09  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler.

        Add support for the beforeload event to frames.  Complete support of the beforeload event by making sure
        its wrapper gets properly constructed (so that the URL field of the event can be accessed).  Add support
        for the Objective-C wrapper class as well.
